robot1_ws/log/build_2026-04-10_15-44-17/brain_pkg/stderr.log
  File "/home/tdun/robot1_ws/install/brain_pkg/lib/python3.10/site-packages/brain_pkg/navigation_node.py", line 147
    else:
    ^^^^
SyntaxError: invalid syntax

